# Calculation

./: .gitignore  README.md
calculator/: CMakeLists.txt
calculator/include/: calculator.h
calculator/src/: calculator.cpp  main.cpp
calculator/tests/: test_calculator.cpp
